--- a/index.html
+++ b/index.html
@@ -108,5 +108,10 @@
     </div>
 
     <script src="script.js"></script>
+
+    <!-- <footer>
+      2023 @ copyright : Web application created by Tanisha Kumari
+    </footer> -->
+    
   </body>
 </html>
